5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1756_1580.log
== TEST (2019-05-26 16:36:36) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))
#faltas
cont1 = 0
falta = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	cont1 = cont1 + 1
#aprovados
cont2 = 0
aprov = 0
while cont2 < size(nomes):
	if notas[cont2]  > 5:
		aprov = aprov + 1
	cont 2 = cont2 + 1
reprov = size(notas) -aprov -falta
#media
cont3 = 0
media = 0
while cont3 < size(notas):
	if notas[cont3] > -1:
		media = media + notas[cont3]
media = round(media/size(notas),2)
#maior nota
cont4 = 0
while cont4 < size(notas):
	if notas[cont4] == max(notas):
		maior = nomes[cont4]
	cont4 = cont4 + 1
print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
File "XXXX", line 17
    cont 2 = cont2 + 1
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:36:54) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))
#faltas
cont1 = 0
falta = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	cont1 = cont1 + 1
#aprovados
cont2 = 0
aprov = 0
while cont2 < size(nomes):
	if notas[cont2]  > 5:
		aprov = aprov + 1
	cont2 = cont2 + 1
reprov = size(notas) -aprov -falta
#media
cont3 = 0
media = 0
while cont3 < size(notas):
	if notas[cont3] > -1:
		media = media + notas[cont3]
media = round(media/size(notas),2)
#maior nota
cont4 = 0
while cont4 < size(notas):
	if notas[cont4] == max(notas):
		maior = nomes[cont4]
	cont4 = cont4 + 1
print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:37:53) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))
#faltas
cont1 = 0
falta = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	cont1 = cont1 + 1
#aprovados
cont2 = 0
aprov = 0
while cont2 < size(nomes):
	if notas[cont2]  > 5:
		aprov = aprov + 1
	cont2 = cont2 + 1
reprov = size(notas) -aprov -falta
#media
cont3 = 0
media = 0
while cont3 < size(notas):
	if notas[cont3] > -1:
		media = media + notas[cont3]
media = round(media/size(notas),2)
#maior nota
cont4 = 0
while cont4 < size(notas):
	if notas[cont4] == max(notas):
		maior = nomes[cont4]
	cont4 = cont4 + 1
print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:38:28) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))
#faltas
cont1 = 0
falta = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	cont1 = cont1 + 1
#aprovados
cont2 = 0
aprov = 0
while cont2 < size(nomes):
	if notas[cont2]  > 5:
		aprov = aprov + 1
	cont2 = cont2 + 1
reprov = size(notas) -aprov -falta
#media
cont3 = 0
media = 0
while cont3 < size(notas):
	if notas[cont3] > -1:
		media = media + notas[cont3]
media = round(media/size(notas),2)
#maior nota
cont4 = 0
while cont4 < size(notas):
	if notas[cont4] == max(notas):
		maior = nomes[cont4]
	cont4 = cont4 + 1
print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:39:06) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))
#faltas
cont1 = 0
falta = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	cont1 = cont1 + 1
#aprovados
cont2 = 0
aprov = 0
while cont2 < size(nomes):
	if notas[cont2]  > 5:
		aprov = aprov + 1
	cont2 = cont2 + 1
reprov = size(notas) -aprov -falta
#media
cont3 = 0
media = 0
while cont3 < size(notas):
	if notas[cont3] > -1:
		media = media + notas[cont3]
media = round(media/size(notas),2)
#maior nota
cont4 = 0
while cont4 < size(notas):
	if notas[cont4] == max(notas):
		maior = nomes[cont4]
	cont4 = cont4 + 1
print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:39:50) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))
#faltas
cont1 = 0
falta = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	cont1 = cont1 + 1
#aprovados
cont2 = 0
aprov = 0
while cont2 < size(nomes):
	if notas[cont2]  > 5:
		aprov = aprov + 1
	cont2 = cont2 + 1
reprov = size(notas) -aprov -falta
#media
cont3 = 0
media = 0
while cont3 < size(notas):
	if notas[cont3] > -1:
		media = media + notas[cont3]
media = round(media/size(notas),2)
#maior nota
cont4 = 0
while cont4 < size(notas):
	if notas[cont4] == max(notas):
		maior = nomes[cont4]
	cont4 = cont4 + 1
print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:43:48) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	elif notas[cont1]  > 5:
		aprov = aprov + 1
	else:
		reprov = reprov + 1
	if notas[cont1] > -1:
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/size(notas),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:44:47) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	elif notas[cont1]  > 5:
		aprov = aprov + 1
	else:
		reprov = reprov + 1
	if notas[cont1] > -1:
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/size(notas),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:45:02) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))
#faltas
cont1 = 0
falta = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	cont1 = cont1 + 1
#aprovados
cont2 = 0
aprov = 0
while cont2 < size(nomes):
	if notas[cont2]  > 5:
		aprov = aprov + 1
	cont2 = cont2 + 1
reprov = size(notas) -aprov -falta
#media
cont3 = 0
media = 0
while cont3 < size(notas):
	if notas[cont3] > -1:
		media = media + notas[cont3]
media = round(media/size(notas),2)
#maior nota
cont4 = 0
while cont4 < size(notas):
	if notas[cont4] == max(notas):
		maior = nomes[cont4]
	cont4 = cont4 + 1
print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
425.411
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:47:49) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	elif notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	else:
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/size(notas),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:49:33) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	elif notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	else:
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.512868
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Notas dos alunos: Nomes dos alunos: 6
1
4
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas dos alunos: Nomes dos alunos: 0
8
3
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:49:41) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	elif notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	else:
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:51:03) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	elif notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	else:
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.462246
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
Notas dos alunos: Nomes dos alunos: 6
1
4
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas dos alunos: Nomes dos alunos: 0
8
3
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:51:45) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	if notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	if notas[cont1] <6:
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.468702
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
8
3.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
1
11
1.38
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
8
4
6.33
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:52:04) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	if notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	if notas[cont1] < 6 :
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.557527
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
8
3.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
1
11
1.38
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
8
4
6.33
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:52:36) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	if notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	if notas[cont1] < 6 :
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:53:55) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	if notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	if notas[cont1] < 6 and notas[cont1] > -1 :
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:53:59) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	if notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	if notas[cont1] < 6 and notas[cont1] > -1 :
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.370851
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
1
5
3.77
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
8
4
6.33
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:40:29) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	if notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	if notas[cont1] < 6 and notas[cont1] > -1 :
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 17:41:07) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
cont2 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	if notas[cont1] == -1:
		falta = falta + 1
	if notas[cont1]  > 5:
		aprov = aprov + 1 
		media = media + notas[cont1]
	if notas[cont1] < 6 and notas[cont1] > -1 :
		reprov = reprov + 1
		media = media + notas[cont1]
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.425164
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
1
5
3.77
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
8
4
6.33
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:58:52) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 18:58:56) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.505353
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
1
5
2.83
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
8
4
5.86
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:59:45) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 18:59:49) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.371534
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
1
5
2.83
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
8
4
5.86
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:43:45) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:44:23) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes = input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
File "XXXX", line 3
    nomes = input()))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:44:29) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes = input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 19:45:04) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes = input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- EXECUTION TIME:
0.592452
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
1
0
9.0
[
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
0
1
1.23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:45:07) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes = input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:46:13) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  array(eval(input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:48:13) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")))

cont1 = 0
falta = 0
aprov = 0
reprov = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
File "XXXX", line 3
    nomes =  input()))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:48:23) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:48:56) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 21:15:56) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:39:26) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:18:14) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
med = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:18:41) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
med = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(med)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:20:21) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	if notas[cont1] > 5 and notas[cont1] < 11:
		aprov = aprov + 1 
	#reprovados
	if notas[cont1] > -1 and notas[cont1] < 6:
		reprov = reprov + 1
	#media
	if notas[cont1] > -1 and notas[cont1] < 11:
		media = media + notas[cont1]
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
med = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(med)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:31:50) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
p=0
a = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	elif(notas[cont1]>-1 and notas[cont1]<=10 ):
		if notas[cont1] > 5 and notas[cont1] < 11:
			aprov = aprov + 1 
			p=p+notas[i]
	#reprovados
		if notas[cont1] > -1 and notas[cont1] < 6:
			reprov = reprov + 1
			a = a+notas[i]
	#media
#notas[cont1] > -1 and notas[cont1] < 11:
media = (a + p)/ size(notas)-falta
		
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
med = round(media/(aprov + reprov),2)

print(falta)
print(aprov)
print(reprov)
print(med)
print(maior)

-- ERROR:
File "XXXX", line 30
    if notas[cont1] == max(notas):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:33:46) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
p=0
a = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	elif(notas[cont1]>-1 and notas[cont1]<=10 ):
		if notas[cont1] > 5 and notas[cont1] < 11:
			aprov = aprov + 1 
			p=p+notas[i]
	#reprovados
		if notas[cont1] > -1 and notas[cont1] < 6:
			reprov = reprov + 1
			a = a+notas[i]	
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = (a + p)/ size(notas)-falta

print(falta)
print(aprov)
print(reprov)
print(med)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:34:12) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
p=0
a = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	elif(notas[cont1]>-1 and notas[cont1]<=10 ):
		if notas[cont1] > 5 and notas[cont1] < 11:
			aprov = aprov + 1 
			p=p+notas[i]
	#reprovados
		if notas[cont1] > -1 and notas[cont1] < 6:
			reprov = reprov + 1
			a = a+notas[i]	
	#maior nota
	if notas[cont1] == max(notas):
		maior = nomes[cont1]
	cont1 = cont1 + 1
media = (a + p)/ size(notas)-falta

print(falta)
print(aprov)
print(reprov)
print(media)
print(maior)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:35:51) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
p=0
a = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	elif(notas[cont1]>-1 and notas[cont1]<=10 ):
		if notas[cont1] > 5 and notas[cont1] < 11:
			aprov = aprov + 1 
			p=p+notas[i]
	#reprovados
		if notas[cont1] > -1 and notas[cont1] < 6:
			reprov = reprov + 1
			a = a+notas[i]	
	#maior nota
cont1=0
while( notas[cont1] != max(notas)):
	cont1 = cont1 + 1
	
media = (a + p)/ size(notas)-falta

print(falta)
print(aprov)
print(reprov)
print(media)
print(nomes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:36:36) 
-- CODE:
from numpy import*
notas =  array(eval(input("Notas dos alunos: ")))
nomes =  input("Nomes dos alunos: ")

cont1 = 0
falta = 0
aprov = 0
reprov = 0
media = 0
p=0
a = 0
while cont1 < size(nomes):
	#falta
	if notas[cont1] == -1:
		falta = falta + 1
	#aprovados
	elif(notas[cont1]>-1 and notas[cont1]<=10 ):
		if notas[cont1] > 5 and notas[cont1] < 11:
			aprov = aprov + 1 
			p=p+notas[i]
	#reprovados
		if notas[cont1] > -1 and notas[cont1] < 6:
			reprov = reprov + 1
			a = a+notas[i]	
	#maior nota
cont1=0
while( notas[cont1] != max(notas)):
	cont1 = cont1 + 1
	
media = (a + p)/ size(notas)-falta

print(falta)
print(aprov)
print(reprov)
print(media)
print(nomes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:39:36) 
-- CODE:
rom numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.18475
-- ERROR:
  File "/home/codebench/codes/1756/1580/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:40:00) 
-- CODE:
rom numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.197837
-- ERROR:
  File "/home/codebench/codes/1756/1580/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:40:17) 
-- CODE:
from numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.512288
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:41:00) 
-- CODE:
from numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:41:03) 
-- CODE:
from numpy import *

notas = array(eval(input("Digite ")))
nomes =  array(eval(input("Digite ")))

faltas = 0
aprovacoes = 0
presentes = 0
reprovacoes = 0
soma = 0
n = 0
aluno = 0

i = 0
while (i < size(notas)):
	if (notas[i] == -1):
		faltas += 1
	if (notas[i] >= 6):
		aprovacoes += 1
	if (notas[i] != -1):
		presentes += 1
		if (notas[i] < 6):
			reprovacoes += 1
		soma += notas[i]
		n += 1
	if (notas[i] == max(notas)):
		aluno = nomes[i]
	i += 1

print(faltas)
print(aprovacoes)
print(reprovacoes)
media = round(soma/n, 2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.451242
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
